Fix Java 21 compiler warnings (deprecations) in URLConverter.